--- a/frontend/.env
+++ b/frontend/.env
@@ -1,5 +1,5 @@
 # Production API URL - Replace with your actual Vercel backend URL
-VITE_REACT_APP_API_BASE_URL=ai-multichat-website.vercel.app
+VITE_REACT_APP_API_BASE_URL=https://ai-multichat-website.vercel.app
 
 # Development API URL (uncomment for local development)
 # VITE_REACT_APP_API_BASE_URL=http://localhost:5002
